Weight Painting Overlay not Visible for Objects with In Front Enabled. #74923

Closed
opened 2020-03-19 12:00:28 +01:00 by Jeroen Bakker · 4 comments
Member

System Information
Operating system: Linux-5.3.0-42-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: Radeon RX Vega ATI Technologies Inc. 4.5.13581 Core Profile Context

Blender Version
Broken: version: 2.83 (sub 10), branch: Unknown, commit date: 2020-03-19, hash: rBUnknown
Worked: (newest version of Blender that worked as expected)

Short description of error
Weight Painting Overlay not Visible for Objects with In Front Enabled.
This issue originated from #70807 (Vertex paint is not visible in X-Ray view)

Exact steps for others to reproduce the error

  1. Go to weight paint mode
  2. Enable In Front on the Default Cube
**System Information** Operating system: Linux-5.3.0-42-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: Radeon RX Vega ATI Technologies Inc. 4.5.13581 Core Profile Context **Blender Version** Broken: version: 2.83 (sub 10), branch: Unknown, commit date: 2020-03-19, hash: `rBUnknown` Worked: (newest version of Blender that worked as expected) **Short description of error** Weight Painting Overlay not Visible for Objects with In Front Enabled. This issue originated from #70807 (Vertex paint is not visible in X-Ray view) **Exact steps for others to reproduce the error** 1. Go to weight paint mode 2. Enable In Front on the Default Cube
Author
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by 0b116a84c9

This issue was referenced by 0b116a84c9380166337722f5d5b3e255e19951b8
Author
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jeroen Bakker self-assigned this 2020-03-23 14:04:13 +01:00
Sign in to join this conversation.
3 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#74923
No description provided.